dreamt up a ui taxonomy idea

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang="en" class="home">
+<html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page-home">
 
 <head>
     <title>WM HTML5 Presentation</title>
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="_assets/_css/main.css" /> 
 </head>
 
-<body class="home clearfix">
+<body class="clearfix">
     
     <div id="site-container" class="container_16 clearfix">
         <div id="site-container-inner" class="grid_16">
@@ -61,7 +61,7 @@
                     <h3>Part 3 (Aaron A.)</h3>
                     <ul>
                         <li>
-                            <a href="/video/">Video</a>
+                            <a href="video.html">Video</a>
                             <ul>
                                 
                             </ul>
