--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page-home">
+<html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page page-home">
 
 <head>
     <title>WM HTML5 Presentation</title>
