--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page page-home">
 
 <head>
+    <meta charset="utf-8" />
     <title>WM HTML5 Presentation</title>
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/reset.css" /> 
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/text.css" /> 
@@ -15,7 +16,7 @@
     <div id="site-container" class="container_16 clearfix">
         <div id="site-container-inner" class="grid_16">
             <section id="slide">
-                <article>
+                <article class="clearfix">
                     <header>
                         <hgroup>
                             <h1>HTML5 Presentation</h1>
