tests of winscp

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page page-home">
 
 <head>
-    <title>WM HTML5 Presentation!</title>
     <meta charset="utf-8" />
-    <title>WM HTML5 Presentation</title>
+    <title>HTML5 Presentation Template</title>
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/reset.css" /> 
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/text.css" /> 
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/960.css" /> 
