--- a/slides/slide-1.html
+++ b/slides/slide-1.html
@@ -7,7 +7,7 @@
 
 <section class="clearfix">
 <header>
-<h3>video Element Support</h3>
+<h3>&lt;video&gt; Element Support</h3>
 </header>
 <table class="grid_10 prefix_3 alpha">
     <caption></caption>
@@ -41,8 +41,8 @@
         <tr>
             <td colspan="10">
                 <dl class="table-legend">
-                    <dt>&times;</dt>
-                    <dd>Not supported</dd>
+                    <dt class="grid_1 alpha">&times;</dt>
+                    <dd class="grid_9 omega"><p>Not supported.</p></dd>
                 </dl>
             </td>
         </tr>
@@ -68,7 +68,7 @@
 <header>
 <h3>Codec/Container Support</h3>
 </header>
-<table class="grid_16 prefix_1 alpha">
+<table class="grid_14 prefix_1 alpha">
     <caption></caption>
     <colgroup>
         <col class="codec grid_4" />
@@ -102,12 +102,12 @@
         <tr>
             <td colspan="11">
                 <dl class="table-legend">
-                    <dt>&times;</dt>
-                    <dd>Not supported</dd>
-                    <dt>&dagger;</dt>
-                    <dd>Safari will play anything that QuickTime can play. QuickTime comes pre-installed with H.264/AAC/MP4 support. There are installable third-party plugins that add support for Theora and WebM, but each user needs to install these plugins before Safari will recognize those video formats.</dd>
-                    <dt>&Dagger;</dt>
-                    <dd>Google Chrome will drop support for H.264 soon. Read about why.</dd>
+                    <dt class="grid_1 alpha">&times;</dt>
+                    <dd class="grid_13 omega"><p>Not supported.</p></dd>
+                    <dt class="grid_1 alpha">&dagger;</dt>
+                    <dd class="grid_13 omega"><p>Safari will play anything that QuickTime can play. QuickTime comes pre-installed with H.264/AAC/MP4 support. There are installable third-party plugins that add support for Theora and WebM, but each user needs to install these plugins before Safari will recognize those video formats.</p></dd>
+                    <dt class="grid_1 alpha">&Dagger;</dt>
+                    <dd class="grid_13 omega"><p>Google Chrome will drop support for H.264 soon. Read about why.</p></dd>
                 </dl>
             </td>
         </tr>
