--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <article class="clearfix">
                     <header>
                         <hgroup>
-                            <h1>HTML5 Presentation</h1>
+                            <h1>HTML5 Presentation Template</h1>
                             <h2>Demos</h2>
                         </hgroup>
                     </header>
@@ -84,9 +84,9 @@
                         </li>
                     </ul>
                 </article>
-                <nav>
-                    <a href="." class="next-slide">&lt;&lt; Prev</a>
-                    <a href="slides/slide-1.html" class="next-slide">Next &gt;&gt;</a>
+                <nav id="control">
+                    <a href="" class="prev-slide">&lt;&lt; Prev</a>
+                    <a href="" class="next-slide">Next &gt;&gt;</a>
                 </nav>
             </section>
         </div>
