--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html lang="en" id="wm-com" class="no-js theme-wm-html5-presentation layout-standard template-front page page-home">
 
 <head>
-    <title>WM HTML5 Presentation!</title>
     <meta charset="utf-8" />
-    <title>WM HTML5 Presentation</title>
+    <title>HTML5 Presentation Template</title>
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/reset.css" /> 
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/text.css" /> 
     <link rel="stylesheet" href="_assets/_css-lib/960.gs/css/960.css" /> 
@@ -20,7 +19,7 @@
                 <article class="clearfix">
                     <header>
                         <hgroup>
-                            <h1>HTML5 Presentation</h1>
+                            <h1>HTML5 Presentation Template</h1>
                             <h2>Demos</h2>
                         </hgroup>
                     </header>
@@ -85,15 +84,15 @@
                         </li>
                     </ul>
                 </article>
-                <nav>
-                    <a href="." class="next-slide">&lt;&lt; Prev</a>
-                    <a href="slides/slide-1.html" class="next-slide">Next &gt;&gt;</a>
+                <nav id="control">
+                    <a href="#slide-0" class="disabled prev-slide">&lt;&lt; Prev</a>
+                    <a href="#slide-1" class="enabled next-slide">Next &gt;&gt;</a>
                 </nav>
             </section>
         </div>
     </div>
     
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script type="text/javascript" src="_assets/_js/main.js"></script>
     
 </body>
